Update Program file

--- a/10xCards/appsettings.json
+++ b/10xCards/appsettings.json
@@ -2,5 +2,8 @@
   "Supabase": {
     "Url": "http://127.0.0.1:54321",
     "Key": "sb_publishable_ACJWlzQHlZjBrEguHvfOxg_3BJgxAaH"
+  },
+  "Serve": {
+    "Cmd": "supabase functions serve generate-flashcard --no-verify-jwt --env-file ./supabase/functions/.env"
   }
 }
