--- a/10xCards/10xCards.csproj
+++ b/10xCards/10xCards.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="10.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="10.0.2" PrivateAssets="all" />
+    <PackageReference Include="NUnit" Version="4.4.0" />
     <PackageReference Include="supabase-csharp" Version="0.16.2" />
   </ItemGroup>
 
